--- a/index.html
+++ b/index.html
@@ -21,15 +21,17 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="dist/style.css" />
-    <script defer src="app/js/script.js"></script>
+    <script defer src="dist/script.js"></script>
     <style>
       .attribution {
         font-size: 0.8rem;
         text-align: center;
         margin-bottom: 1rem;
+        color: var(--very-contrasted-txt-color);
       }
       .attribution a {
-        color: hsl(228, 73%, 80%);
+        font-weight: 700;
+        color: var(--g-text-color);
       }
     </style>
   </head>
@@ -115,7 +117,10 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Bongende</a>.
+        >. Coded by
+        <a href="https://www.linkedin.com/in/christopherduwa" target="_blank"
+          >Bongende</a
+        >.
       </div>
     </footer>
     <!--</section>-->
