--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="dist/style.css" />
-    <script defer src="dist/script.js"></script>
+    <script defer src="app/js/script.js"></script>
     <style>
       .attribution {
         font-size: 0.8rem;
